@startuml

class ResetPasswordController {
    - service : EmailSenderService
    - passwordTokenRepository : PasswordTokenRepository
    - userRepository : UserRepository
    - adminMethodsService : AdminMethodsService
    - log : Logger
    - PASSWORDSIZE : int {static}

    + resetPassword(Model) : String
    + firstResetPassword(Authentication, ResetPassword, Model) : String
    + resetSent(ResetPassword, Model) : String
    + showChangePasswordPage(Model, ResetPassword, String) : String
    + updateRecovery(long, User, ResetPassword, String, Model) : String
    + emailSentConfirm(Model) : void
}

class EmailSenderService {
}

class PasswordTokenRepository {
}

class UserRepository {
}

class AdminMethodsService {
}

class Logger {
}

class Model {
}

class Authentication {
}

class ResetPassword {
}

class User {
}

class PasswordResetToken {
}

ResetPasswordController --> EmailSenderService : uses
ResetPasswordController --> PasswordTokenRepository : uses
ResetPasswordController --> UserRepository : uses
ResetPasswordController --> AdminMethodsService : uses
ResetPasswordController --> Logger : uses
ResetPasswordController --> Model : uses
ResetPasswordController --> Authentication : uses
ResetPasswordController --> ResetPassword : uses
ResetPasswordController --> User : uses
ResetPasswordController --> PasswordResetToken : uses

@enduml
